# src/modules/auth/auth.controller.js
@@ -1,4 +1,10 @@
-import { fotgotPasswordService, loginService, refreshTokenService, registerSevice } from "./auth.service";
+import {
+	fotgotPasswordService,
+	loginService,
+	refreshTokenService,
+	registerSevice,
+	resetPasswordService,
+} from "./auth.service";
 import { createResponse } from "../../common/utils/create-response";
 import MESSAGES from "./auth.message";
 import handleAsync from "../../common/utils/async-handler";
@@ -17,7 +23,9 @@ export const loginUser = handleAsync(async (req, res, next) => {
 
 // * @route POST /api/auth/refresh-token
 export const refreshToken = handleAsync(async (req, res, next) => {
-	const data = await refreshTokenService(req);
+	// Ưu tiên lấy refreshToken từ body, header, cookie
+	const refreshToken = req.body?.refreshToken || req.headers["x-refresh-token"] || req.cookies.refreshToken;
+	const data = await refreshTokenService(refreshToken);
 	return createResponse(res, 200, MESSAGES.REFRESH_TOKEN_SUCCESS, data);
 });
 
@@ -27,23 +35,13 @@ export const forgotPassword = handleAsync(async (req, res, next) => {
 	if (!isSendMail) {
 		return createError(400, MESSAGES.SEND_MAIL_FAIL);
 	}
-	return res.status(200).json(createResponse(res, 200, MESSAGES.SEND_SUCCESS));
+	return createResponse(res, 200, MESSAGES.SEND_SUCCESS);
 });
 
-// @route POST /api/auth/reset-password/:resetToken
-// Khi người dùng nhấn vào link trong email, họ sẽ được chuyển đến trang reset password,
-// và trên đường dẫn sẽ có token được gửi kèm theo
-// Ứng dụng React sẽ gom token từ URL và kèm theo newPassword gửi lên server
 export const resetPassword = handleAsync(async (req, res, next) => {
-	const { resetToken } = req.params;
-	const { newPassword } = req.body;
-	const decoded = jwt.verify(resetToken, RESET_PASSWORD_SECRET);
-	const user = await User.findById(decoded.id);
-	if (!user) return next(createError(404, MESSAGES.AUTH.USER_NOT_FOUND));
-	user.password = await bcrypt.hash(newPassword, 10);
-	await user.save();
+	const isResetPassword = await resetPasswordService(req.body.resetToken, req.body.newPassword);
 
-	// await sendPasswordResetSuccessEmail(user.email);
+	if (!isResetPassword) return res.status(400).json(createError(400, MESSAGES.PASSWORD_CHANGE_FAILED));
 
-	return res.status(200).json(createResponse(res, 200, MESSAGES.AUTH.PASSWORD_RESET_SUCCESS));
+	return createResponse(res, 200, MESSAGES.PASSWORD_RESET_SUCCESS);
 });
